# pneumonia-backoffice

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: cb7205e30f5f_feat_데이터베이스_초기_스키마_생성.py
app/: .dockerignore  Dockerfile  main.py
app/apis/: ai_analysis.py  patients.py  practice_apis.py  prediction.py  users.py
app/core/: config.py  redis_client.py
app/core/db/: databases.py
app/models/: __init__.py  ai_analysis_result.py  medical_record.py  patient.py  user.py  xray_image.py
docs/: 1일차_team_rules.md  3일차_db_migration.md  3일차_프로젝트_뜯어보기_박종현.md  5일차_환자관리_API_설계_권순현.md  5일차_환자관리_API_설계.md  6일차_ 폐렴예측 API 설계서  7일차_앱_실행화면.md  9일차_동시성문제_해결을위한_아키텍처설계.md
static/: apis.js  pages.js
static/templates/: signup.html
worker/: Dockerfile  main.py  model.py  redis_client.py
worker/models/: desktop.ini
