[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "bcrypt>=4.0.0",
    "cryptography>=46.0.6",
    "fastapi[standard]>=0.135.3",
    "pillow>=10.0.0",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "uuid6>=2025.0.1",
    "redis>=5.0.0",
]
